--- a/index.html
+++ b/index.html
@@ -15,7 +15,5 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <img src="images/communication.png" alt="" />
-  </body>
+  <body></body>
 </html>
